--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                 </div>
             </div>
             <button type="submit">Create Account</button>
+            <p>Already have an account? <a>Log In</a></p>
         </form>
+
     </div>
 </body>
 </html>
