Make the website name div translucent

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="side">
         <div id="translucent">
-            <h1>Verx</h1>
+            <h1 id="website-name">Verx</h1>
         </div>
     </div>
     <div id="main">
