--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </div>
     <div id="main">
         <div id="info">
-            <p>
+            <p class="info-text">
             This is not a real online service! You know you need something like this in
             your life to help you realize your deepest dreams.
             </p>
-            <p>Sign-up <i>now<i> to get started.</p>
+            <p class="info-text">Sign-up <i>now<i> to get started.</p>
             </br>
-            <p>You know you want to</p>
+            <p class="info-text">You know you want to</p>
         </div>
         <form>
             <div id="form-container">
