--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             This is not a real online service! You know you need something like this in
             your life to help you realize your deepest dreams.
             </p>
-            <p class="info-text">Sign-up <i>now<i> to get started.</p>
+            <p class="info-text">Sign-up <i>now</i> to get started.</p>
             </br>
             <p class="info-text">You know you want to</p>
         </div>
