Add header for form container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <form>
             <div id="form-container">
-                Let's do this!
+                <p id="form-header">Let's do this!</p>
                 <div class="sub-container" id="names">
                     <div class="input-container">
                         <label for="first-name">FIRST NAME</label>
