Remove some p tags

--- a/index.html
+++ b/index.html
@@ -15,16 +15,11 @@
     <div id="main">
         <div id="info">
             <p class="info-text">
-            This is not a real online service! You know you need something like this in
-            your life to help you realize your deepest dreams.
+            Sign-In
             </p>
-            <p class="info-text">Sign-up <i>now</i> to get started.</p>
-            </br>
-            <p class="info-text">You know you want to</p>
         </div>
         <form>
             <div id="form-container">
-                <p id="form-header">Let's do this!</p>
                 <div class="sub-container" id="names">
                     <div class="input-container">
                         <label for="first-name">FIRST NAME</label>
