Add id for last p tag

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <button type="submit">Create Account</button>
-            <p>Already have an account? <a>Log In</a></p>
+            <p id="account-exist">Already have an account? <a>Log In</a></p>
         </form>
     </div>
 </body>
