--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
                 <div class="sub-container" id="names">
                     <div class="input-container">
                         <label for="first-name">FIRST NAME</label>
-                        <input id="first-name" type="text" name="first-name" minlength="1" maxlength="10" required>
+                        <input id="first-name" type="text" name="first-name" minlength="1" maxlength="10">
                     </div>
                     <div class="input-container">
                         <label for="last-name">LAST NAME</label>
-                        <input id="last-name" type="text" name="last-name" minlength="1" maxlength="10" required>
+                        <input id="last-name" type="text" name="last-name" minlength="1" maxlength="10">
                     </div>
                 </div>
                 <div class="sub-container" id="contact">
                     <div class="input-container">
                         <label for="email">EMAIL</label>
-                        <input id="email" type="email" name="email" required>
+                        <input id="email" type="email" name="email">
                     </div>
                     <div class="input-container">
                         <label for="contact-number">CONTACT NUMBER</label>
-                        <input id="contact" type="text" name="contact-number" required>
+                        <input id="contact" type="text" name="contact-number">
                     </div>
                 </div>
                 <div class="sub-container" id="password">
                     <div class="input-container">
                         <label for="password">PASSWORD</label>
-                        <input id="password" type="password" minlength="10" required>
+                        <input id="password" type="password" minlength="10">
                     </div>
                     <div class="input-container">
                         <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input id="confirm-password" type="password" minlength="10" required>
+                        <input id="confirm-password" type="password" minlength="10">
                     </div>
                 </div>
             </div>
