--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="translucent">
             <h1 id="website-name">Verx</h1>
         </div>
+        <p id="side-attribute">Photo by Annie Roenkae</p>
     </div>
     <div id="main">
         <div id="info">
