Add attribute for symbol

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="translucent">
             <h1 id="website-name"> Verx </h1>
         </div>
-        <p id="side-attribute">Photo by Annie Roenkae</p>
+        <p id="side-attribute">Photo by Annie Roenkae . Symbol by icons8</p>
     </div>
     <div id="main">
         <div id="info">
